# yolox_sort

./: .gitignore  CMakeLists.txt  readme.md
config/: C3.yml  alg.yml
doc/: MQTTtopic格式.xlsx
models/: readme.md  zc_nanox_486_640_nopad.onnx
src/base/: base_detector.cpp  base_detector.h  base_tracker.h  trt_logging.h
src/lib/: accs_processer.cpp  accs_processer.h
src/lib/detector/: detector_yolox.cpp  detector_yolox.h
src/lib/detector/detector_utils/: detector_utils.h
src/lib/detector/yolov5/: detector_yolov5_wrapper.cpp  detector_yolov5_wrapper.h  yolov5_engine.h
src/lib/intrusion/: region_intrusion.cpp  region_intrusion.h
src/lib/tracker/: kalman_box_trakcker.cpp  kalman_box_trakcker.h  sortx.cpp  sortx.h
src/lib/tracker/tracker_utils/: kalman_filter.cpp  kalman_filter.h  matrix.h  munkres.h  tracker_utils.h
src/types/: base_macros.h  box.h  camera_frame.cpp  camera_frame.h  object_detected.cpp  object_detected.h  object_region.h  object_tracked.cpp  object_tracked.h
src/utils/: zh_log.h
test/: mp42jpg.py  test_detector.cpp  test_pipeline.cpp  test_tracker.cpp
